@startuml

package business {

    class Arc {
        - place: Place
        - transition: Transition
        + getPlace(): Place
        + setPlace(place: Place): void
        + getTransition(): Transition
        + setTransition(transition: Transition): void
    }

    class NetObject {
        -- // other attributes and methods
    }

    class Place {
        -- // attributes and methods of Place class (not provided)
    }

    class Transition {
        -- // attributes and methods of Transition class (not provided)
    }

    Arc --|> NetObject
    Arc o-- Place: - place
    Arc o-- Transition: - transition
}

@enduml
